# swarm-arena

./: .gitignore  .gitmodules  README.md  d2_run.sh  test.sh
planner/plan_env/include/plan_env/: grid_map.h
planner/plan_env/src/: grid_map.cpp
planner/plan_manage/: CMakeLists.txt  package.xml
planner/plan_manage/include/plan_manage/: ego_replan_fsm.h  planner_manager.h
planner/plan_manage/launch/: 10agent_12radius_antipodal.launch  10agent_narrow_passage_travel.launch  10agent_opp_side_swap.launch  20agent_12radius_antipodal.launch  20agent_narrow_passage_travel.launch  20agent_opp_side_swap.launch  40agent_12radius_antipodal.launch  40agent_narrow_passage_travel.launch  40agent_opp_side_swap.launch  autoflight.launch  circle_exchange_small.launch  opposite_swap_wall.launch  single_drone_interactive.launch  swap_side.launch  test.launch  try_csv.launch  wall.launch
planner/plan_manage/launch/include/: advanced_param.xml  default.rviz  run_in_sim.xml  simulator.xml
planner/plan_manage/launch/launch_gen/: antipodal_gen.py  narrow_passage_swap.py  narrow_passage_travel.py  opposite_side_swap_gen.py
planner/plan_manage/log/: summary_10agent_antipodal_swap.csv  summary_10agent_narrow_passage_travel.csv  summary_10agent_opposite_side_swap.csv  summary_20agent_antipodal_swap.csv  summary_20agent_narrow_passage_travel.csv  summary_20agent_opposite_side_swap.csv  summary_3agent_antipodal_swap.csv  summary_40agent_antipodal_swap.csv  summary_40agent_narrow_passage_travel.csv  summary_40agent_opposite_side_swap.csv  summary_none.csv
planner/plan_manage/src/: ego_replan_fsm.cpp  planner_manager.cpp
planner/swarm_bridge/: CMakeLists.txt  package.xml
planner/swarm_bridge/launch/: bridge_udp.launch
planner/swarm_bridge/src/: bridge_node_udp.cpp
planner/traj_opt/src/: poly_traj_optimizer.cpp
planner/traj_utils/include/traj_utils/: planning_visualization.h
planner/traj_utils/src/: planning_visualization.cpp
simulator/local_sensing/src/: pointcloud_render_node.cpp
simulator/so3_control/: CMakeLists.txt
utils/csv_log/: CMakeLists.txt  package.xml
utils/csv_log/src/: csv_log_dist_cal.cpp  csv_log_node.cpp
utils/odom_visualization/: CMakeLists.txt  package.xml
